--- a/.env
+++ b/.env
@@ -6,7 +6,7 @@ APP_URL=http://localhost
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=myLaravel
+DB_DATABASE=myEShop
 DB_USERNAME=root
 DB_PASSWORD=1234
 
